# SponsorMonitor-GCP

./: .dockerignore  .env  .gcloudignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sm.conf  sm.py
.github/workflows/: ci.yml
docker-compose/: docker-compose.yml  traefik.yml
sponsormonitor/: config.py  github.py  models.py
tests/: conftest.py  new_sponsor.json  sponsor_tier_change.json  test_api.py  test_github.py  test_models.py  test_settings.py
